<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    tools:context=".ListOfFarms">

    <TextView
        android:id="@+id/id_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:text="@string/create_cow"
        android:textAppearance="@android:style/TextAppearance.Large" />


    <LinearLayout
        android:id="@+id/id_main_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytButtons"
        android:layout_below="@+id/id_tv_title"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/id_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/korova" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_cow"
                        android:textAppearance="@android:style/TextAppearance.Large" />

                    <EditText
                        android:id="@+id/id_et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_tv_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday_cow"
                        android:textAppearance="@android:style/TextAppearance.Large" />

                    <Button
                        android:id="@+id/button_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onDatePicker"
                        android:padding="5dp"
                        android:text="@string/birthday_cow"
                        tools:ignore="OnClick" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancel"
            android:padding="5dp"
            android:text="@string/cancel"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSaveCow"
            android:padding="5dp"
            android:text="@string/save"
            tools:ignore="OnClick" />
    </LinearLayout>


</RelativeLayout>